# mnist_cpp_server

./: .gitignore  CMakeLists.txt  README.md  predict.py  requirements.txt  server.cpp  train.py
data/: example_1.json  example_2.json  example_3.json  example_4.json  example_5.json
